[project]
name = "mitre-ttp-reasoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.13",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "orjson>=3.11.7",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.3",
]
